ghc-4335c07/testsuite/tests/ghci/prog013/prog013.script
:set editor echo
:l Good.hs
:e
:l Bad.hs
:e
:e ./Bad.hs
:l Good.hs
:e
+
:e foo
:l Bad.hs
:e bar
